1998-02-19  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garthi.ads: Capitalization fixes.

	* s-garrep.adb: Likewise.

	* s-gartcp.adb: Likewise.

	* s-garnam.adb: Likewise.

	* s-rpc.adb: Likewise.

1998-02-19  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-gardeb.adb: Use GNAT.OS_Lib.String_Access and remove
 	dependencies from System.Garlic.OS_Lib.

	* s-garopt.ads, s-garopt.adb: Ditto.

	* Makefile.am, Makefile.in: Remove s-gaosli.* from the Makefiles
	and update dependencies.

1998-02-18  Laurent Pautet  <pautet@scapin.enst.fr>

	* Makefile.am, Makefile.in: Remove s-gafino.ad[bs]. No longer
 	needed.

1998-02-18  Laurent Pautet  <pautet@dorine.enst.fr>

	* s-garfil.adb: Comment out code that prevents GARLIC from
	compiling.
	
1998-02-18  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garuti.adb: Use GNAT.OS_Lib to get Errno instead of
	System.Garlic.OS_Lib.

	* s-ganobl.adb: Likewise.

	* s-garnam.adb: Likewise.

	* s-gaosli.ads: Replace s-gaosli.ads.in now that C_Errno is gone.

1998-02-16  Samuel Tardieu  <sam@inf.enst.fr>

	* s-rpcpoo.adb: Move with clause from s-rpcpoo.ads to here.

	* s-garter.adb: Remove useless with clauses.

	* s-gafizi.ads: Likewise.

	* s-rpc.adb: Likewise.

	* s-rpcpoo.ads: Likewise.

	* s-garuni.adb: Likewise.

	* s-gafizi.adb: Use pragma Warnings to remove bogus warnings.

	* s-garhea.ads: Likewise.

	* s-gardeb.adb: Likewise.

	* s-gafino.adb: Likewise.

	* s-garuni.adb: Likewise.

	* s-parint.adb: Likewise.

1998-02-15  Samuel Tardieu  <sam@inf.enst.fr>

	* s-rpc.adb: Remove unused variables.

	* s-rpstio.adb: Likewise.

	* s-gartcp.adb: Likewise.
	
	* s-stratt.adb: Likewise.

	* s-garhea.adb: Use pragma Warnings to remove bogus warning about
	unused entities.

	* s-garsta.adb: Likewise.

1998-01-26  Samuel Tardieu  <sam@inf.enst.fr>

	* s-gartyp.ads: Expose the type of Portable_Address so that it is
	possible to obtain its value using the Image attribute.

1998-01-19  Samuel Tardieu  <sam@inf.enst.fr>
